Timeseries plot wrapper, split notebooks, cleanup misc

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -41,18 +41,13 @@
    "source": [
     "from collections import defaultdict\n",
     "import datetime\n",
+    "import sys\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "\n",
-    "import emission.core.get_database as edb\n",
-    "import emission.core.wrapper.entry as ecwe\n",
-    "import emission.storage.decorations.analysis_timeseries_queries as esda\n",
-    "import emission.storage.decorations.trip_queries as esdt\n",
-    "import emission.storage.decorations.timeline as esdl\n",
-    "import emission.storage.timeseries.abstract_timeseries as esta\n",
-    "import emission.storage.timeseries.timequery as estt\n",
     "from plots import *\n",
     "import scaffolding\n",
     "from uuid import UUID\n",
@@ -60,6 +55,18 @@
     "sns.set_style(\"whitegrid\")\n",
     "sns.set()\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "furnished-silicon",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Do not run this notebook at all unless it is for a program; nbclient will run up through this cell\n",
+    "if study_type != \"program\":\n",
+    "    raise Exception(\"The plots in this notebook are only relevant to programs\")"
    ]
   },
   {
@@ -169,33 +176,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sized-drain",
-   "metadata": {},
-   "source": [
-    "### Distance vs. energy impact (kWH) by Mode_confirm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "protecting-falls",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "data=expanded_ct.loc[(expanded_ct['distance_miles'] <= 40)].sort_values(by=['Energy_Impact(kWH)'], ascending=False)   \n",
-    "x='Energy_Impact(kWH)'\n",
-    "y='distance_miles'\n",
-    "legend ='Mode_confirm'\n",
-    "plot_title=\"Sketch of Energy Impact (kWH) by Travel Mode Selected\\n%s\" % quality_text\n",
-    "file_name ='sketch_distance_energy_impact%s.png' % file_suffix\n",
-    "distancevsenergy(data,x,y,legend,plot_title,file_name)\n",
-    "scaffolding.store_alt_text_generic('scatter plot', plot_title, file_name, './alt_text_lookup.json')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "ready-return",
    "metadata": {},
    "source": [
@@ -211,38 +191,37 @@
    },
    "outputs": [],
    "source": [
-    "if study_type == 'program':\n",
-    "    #eirp : energy impact replaced_mode\n",
-    "    eirc=expanded_ct.groupby('Replaced_mode').agg({'Energy_Impact(kWH)': ['sum', 'mean']},)\n",
-    "    eirc.columns = ['Sketch of Total Energy_Impact(kWH)', 'Sketch of Average Energy_Impact(kWH)']\n",
-    "    eirc = eirc.reset_index()\n",
-    "    eirc = eirc.sort_values(by=['Sketch of Total Energy_Impact(kWH)'], ascending=False)\n",
-    "    eirc['boolean'] = eirc['Sketch of Total Energy_Impact(kWH)'] > 0\n",
-    "    \n",
-    "    subset1 = eirc [['Replaced_mode', 'Sketch of Total Energy_Impact(kWH)']].copy()\n",
-    "    subset1.rename(columns = {'Replaced_mode':'Transport Mode','Sketch of Total Energy_Impact(kWH)':'Replaced_Mode' }, inplace=True)\n",
+    "#eirp : energy impact replaced_mode\n",
+    "eirc=expanded_ct.groupby('Replaced_mode').agg({'Energy_Impact(kWH)': ['sum', 'mean']},)\n",
+    "eirc.columns = ['Sketch of Total Energy_Impact(kWH)', 'Sketch of Average Energy_Impact(kWH)']\n",
+    "eirc = eirc.reset_index()\n",
+    "eirc = eirc.sort_values(by=['Sketch of Total Energy_Impact(kWH)'], ascending=False)\n",
+    "eirc['boolean'] = eirc['Sketch of Total Energy_Impact(kWH)'] > 0\n",
     "\n",
-    "    #eimc : energy impact mode_confirm\n",
-    "    eimc=expanded_ct.groupby('Mode_confirm').agg({'Energy_Impact(kWH)': ['sum', 'mean']},)\n",
-    "    eimc.columns = ['Sketch of Total Energy_Impact(kWH)', 'Sketch of Average Energy_Impact(kWH)']\n",
-    "    eimc = eimc.reset_index()\n",
-    "    eimc = eimc.sort_values(by=['Sketch of Total Energy_Impact(kWH)'], ascending=False)\n",
+    "subset1 = eirc [['Replaced_mode', 'Sketch of Total Energy_Impact(kWH)']].copy()\n",
+    "subset1.rename(columns = {'Replaced_mode':'Transport Mode','Sketch of Total Energy_Impact(kWH)':'Replaced_Mode' }, inplace=True)\n",
     "\n",
-    "    subset2 = eimc [['Mode_confirm', 'Sketch of Total Energy_Impact(kWH)']].copy()\n",
-    "    subset2.rename(columns = {'Mode_confirm':'Transport Mode','Sketch of Total Energy_Impact(kWH)':'Mode_Confirm' }, inplace=True)\n",
+    "#eimc : energy impact mode_confirm\n",
+    "eimc=expanded_ct.groupby('Mode_confirm').agg({'Energy_Impact(kWH)': ['sum', 'mean']},)\n",
+    "eimc.columns = ['Sketch of Total Energy_Impact(kWH)', 'Sketch of Average Energy_Impact(kWH)']\n",
+    "eimc = eimc.reset_index()\n",
+    "eimc = eimc.sort_values(by=['Sketch of Total Energy_Impact(kWH)'], ascending=False)\n",
     "\n",
-    "    df_plot = pd.merge(subset1, subset2, on=\"Transport Mode\")\n",
-    "    df = pd.melt(df_plot , id_vars=['Transport Mode'], value_vars=['Replaced_Mode','Mode_Confirm'], var_name='selection')\n",
-    "    df.rename(columns = {'value':'Energy Impact (kWH)'}, inplace = True)\n",
-    "    \n",
-    "    df= df.sort_values(by=['Energy Impact (kWH)'], ascending=False)\n",
-    "    x= 'Energy Impact (kWH)'\n",
-    "    y= 'Transport Mode'\n",
-    "    color = 'selection'\n",
-    "    plot_title=\"Sketch of Energy Impact (kWH) by Transport Mode\\n%s\" % quality_text\n",
-    "    file_name ='sketch_all_energy_impact%s.png' % file_suffix\n",
-    "    overeall_energy_impact(x,y,color,df,plot_title,file_name)\n",
-    "    scaffolding.store_alt_text_bar(pd.DataFrame(df['Energy Impact (kWH)'].values, df['selection'] + '; ' + df['Transport Mode']), file_name, plot_title, './alt_text_lookup.json')"
+    "subset2 = eimc [['Mode_confirm', 'Sketch of Total Energy_Impact(kWH)']].copy()\n",
+    "subset2.rename(columns = {'Mode_confirm':'Transport Mode','Sketch of Total Energy_Impact(kWH)':'Mode_Confirm' }, inplace=True)\n",
+    "\n",
+    "df_plot = pd.merge(subset1, subset2, on=\"Transport Mode\")\n",
+    "df = pd.melt(df_plot , id_vars=['Transport Mode'], value_vars=['Replaced_Mode','Mode_Confirm'], var_name='selection')\n",
+    "df.rename(columns = {'value':'Energy Impact (kWH)'}, inplace = True)\n",
+    "\n",
+    "df= df.sort_values(by=['Energy Impact (kWH)'], ascending=False)\n",
+    "x= 'Energy Impact (kWH)'\n",
+    "y= 'Transport Mode'\n",
+    "color = 'selection'\n",
+    "plot_title=\"Sketch of Energy Impact (kWH) by Transport Mode\\n%s\" % quality_text\n",
+    "file_name ='sketch_all_energy_impact%s.png' % file_suffix\n",
+    "overeall_energy_impact(x,y,color,df,plot_title,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(df['Energy Impact (kWH)'].values, df['selection'] + '; ' + df['Transport Mode']), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -260,17 +239,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if study_type == 'program':\n",
-    "    net_energy_saved = round(sum(eirc['Sketch of Total Energy_Impact(kWH)']), 2)\n",
+    "net_energy_saved = round(sum(eirc['Sketch of Total Energy_Impact(kWH)']), 2)\n",
     "\n",
-    "    x = eirc['Sketch of Total Energy_Impact(kWH)']\n",
-    "    y = eirc['Replaced_mode']\n",
-    "    color =eirc['boolean']\n",
+    "x = eirc['Sketch of Total Energy_Impact(kWH)']\n",
+    "y = eirc['Replaced_mode']\n",
+    "color =eirc['boolean']\n",
     "\n",
-    "    plot_title=\"Sketch of Energy Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_energy_saved, quality_text)\n",
-    "    file_name ='sketch_all_mode_energy_impact%s.png' % file_suffix\n",
-    "    energy_impact(x,y,color,plot_title,file_name)\n",
-    "    scaffolding.store_alt_text_bar(pd.DataFrame(x,y), file_name, plot_title, './alt_text_lookup.json')"
+    "plot_title=\"Sketch of Energy Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_energy_saved, quality_text)\n",
+    "file_name ='sketch_all_mode_energy_impact%s.png' % file_suffix\n",
+    "energy_impact(x,y,color,plot_title,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(x,y), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -290,23 +268,22 @@
    },
    "outputs": [],
    "source": [
-    "if study_type == 'program':\n",
-    "    # ebei : ebike energy impact\n",
-    "    ebei=data_eb.groupby('Replaced_mode').agg({'Energy_Impact(kWH)': ['sum', 'mean']},)\n",
-    "    ebei.columns = ['Sketch of Total Energy_Impact(kWH)', 'Sketch of Average Energy_Impact(kWH)']\n",
-    "    ebei= ebei.reset_index()\n",
-    "    ebei = ebei.sort_values(by=['Sketch of Total Energy_Impact(kWH)'], ascending=False)\n",
-    "    ebei['boolean'] = ebei['Sketch of Total Energy_Impact(kWH)'] > 0\n",
-    "    net_energy_saved = round(sum(ebei['Sketch of Total Energy_Impact(kWH)']), 2)\n",
+    "# ebei : ebike energy impact\n",
+    "ebei=data_eb.groupby('Replaced_mode').agg({'Energy_Impact(kWH)': ['sum', 'mean']},)\n",
+    "ebei.columns = ['Sketch of Total Energy_Impact(kWH)', 'Sketch of Average Energy_Impact(kWH)']\n",
+    "ebei= ebei.reset_index()\n",
+    "ebei = ebei.sort_values(by=['Sketch of Total Energy_Impact(kWH)'], ascending=False)\n",
+    "ebei['boolean'] = ebei['Sketch of Total Energy_Impact(kWH)'] > 0\n",
+    "net_energy_saved = round(sum(ebei['Sketch of Total Energy_Impact(kWH)']), 2)\n",
     "\n",
-    "    x = ebei['Sketch of Total Energy_Impact(kWH)']\n",
-    "    y = ebei['Replaced_mode']\n",
-    "    color =ebei['boolean']\n",
+    "x = ebei['Sketch of Total Energy_Impact(kWH)']\n",
+    "y = ebei['Replaced_mode']\n",
+    "color =ebei['boolean']\n",
     "\n",
-    "    plot_title=\"Sketch of Energy Impact of E-Bike trips\\n Contribution by replaced mode towards a total of %s (kWH)\\n %s\" % (net_energy_saved, quality_text_mode)\n",
-    "    file_name ='sketch_energy_impact_ebike%s.png' % file_suffix\n",
-    "    energy_impact(x,y,color,plot_title,file_name)\n",
-    "    scaffolding.store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title, './alt_text_lookup.json')"
+    "plot_title=\"Sketch of Energy Impact of E-Bike trips\\n Contribution by replaced mode towards a total of %s (kWH)\\n %s\" % (net_energy_saved, quality_text_mode)\n",
+    "file_name ='sketch_energy_impact_ebike%s.png' % file_suffix\n",
+    "energy_impact(x,y,color,plot_title,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -324,24 +301,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if study_type == 'program':\n",
-    "    co2rp=expanded_ct.groupby('Replaced_mode').agg({'CO2_Impact(lb)': ['sum', 'mean']},)\n",
-    "    co2rp.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
-    "    co2rp = co2rp.reset_index()\n",
-    "    co2rp= co2rp.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
-    "    co2rp['boolean'] = co2rp['total_lb_CO2_emissions'] > 0\n",
+    "co2rp=expanded_ct.groupby('Replaced_mode').agg({'CO2_Impact(lb)': ['sum', 'mean']},)\n",
+    "co2rp.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
+    "co2rp = co2rp.reset_index()\n",
+    "co2rp= co2rp.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
+    "co2rp['boolean'] = co2rp['total_lb_CO2_emissions'] > 0\n",
     "\n",
     "\n",
-    "    net_CO2_saved = round(sum(co2rp['total_lb_CO2_emissions']), 2)\n",
+    "net_CO2_saved = round(sum(co2rp['total_lb_CO2_emissions']), 2)\n",
     "\n",
-    "    x = co2rp['total_lb_CO2_emissions']\n",
-    "    y = co2rp['Replaced_mode']\n",
-    "    color =co2rp['boolean']\n",
+    "x = co2rp['total_lb_CO2_emissions']\n",
+    "y = co2rp['Replaced_mode']\n",
+    "color =co2rp['boolean']\n",
     "\n",
-    "    plot_title=\"Sketch of CO2 Emissions Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_CO2_saved, quality_text)\n",
-    "    file_name ='sketch_all_mode_CO2impact%s.png' % file_suffix\n",
-    "    CO2_impact(x,y,color,plot_title,file_name)\n",
-    "    scaffolding.store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title, './alt_text_lookup.json')"
+    "plot_title=\"Sketch of CO2 Emissions Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_CO2_saved, quality_text)\n",
+    "file_name ='sketch_all_mode_CO2impact%s.png' % file_suffix\n",
+    "CO2_impact(x,y,color,plot_title,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -359,22 +335,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if study_type == 'program':\n",
-    "    ebco2=data_eb.groupby('Replaced_mode').agg({'CO2_Impact(lb)': ['sum', 'mean']},)\n",
-    "    ebco2.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
-    "    ebco2 = ebco2.reset_index()\n",
-    "    ebco2 = ebco2.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
-    "    ebco2['boolean'] = ebco2['total_lb_CO2_emissions'] > 0\n",
-    "    net_CO2_emissions = round(sum(ebco2['total_lb_CO2_emissions']), 2)\n",
+    "ebco2=data_eb.groupby('Replaced_mode').agg({'CO2_Impact(lb)': ['sum', 'mean']},)\n",
+    "ebco2.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
+    "ebco2 = ebco2.reset_index()\n",
+    "ebco2 = ebco2.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
+    "ebco2['boolean'] = ebco2['total_lb_CO2_emissions'] > 0\n",
+    "net_CO2_emissions = round(sum(ebco2['total_lb_CO2_emissions']), 2)\n",
     "\n",
-    "    x = ebco2['total_lb_CO2_emissions']\n",
-    "    y = ebco2['Replaced_mode']\n",
-    "    color = ebco2['boolean']\n",
+    "x = ebco2['total_lb_CO2_emissions']\n",
+    "y = ebco2['Replaced_mode']\n",
+    "color = ebco2['boolean']\n",
     "\n",
-    "    plot_title=\"Sketch of Total Pounds of CO2 Emissions of E-Bike trips\\n Contribution by replaced mode towards a total of %s (lb CO2 Emissions )\\n %s\" % (net_CO2_emissions, quality_text_mode)\n",
-    "    file_name ='sketch_CO2impact_ebike%s.png' % file_suffix\n",
-    "    CO2_impact(x,y,color,plot_title,file_name)\n",
-    "    scaffolding.store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title, './alt_text_lookup.json')"
+    "plot_title=\"Sketch of Total Pounds of CO2 Emissions of E-Bike trips\\n Contribution by replaced mode towards a total of %s (lb CO2 Emissions )\\n %s\" % (net_CO2_emissions, quality_text_mode)\n",
+    "file_name ='sketch_CO2impact_ebike%s.png' % file_suffix\n",
+    "CO2_impact(x,y,color,plot_title,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title, './alt_text_lookup.json')"
    ]
   }
  ],
