--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -28,8 +28,8 @@
     "year = 2021\n",
     "month = 9\n",
     "program = \"prepilot\"\n",
-    "study_type = \"program\"\n",
-    "mode_of_interest = \"Pilot ebike\""
+    "study_type = \"study\"\n",
+    "mode_of_interest = None"
    ]
   },
   {
@@ -41,18 +41,13 @@
    "source": [
     "from collections import defaultdict\n",
     "import datetime\n",
+    "import sys\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "\n",
-    "import emission.core.get_database as edb\n",
-    "import emission.core.wrapper.entry as ecwe\n",
-    "import emission.storage.decorations.analysis_timeseries_queries as esda\n",
-    "import emission.storage.decorations.trip_queries as esdt\n",
-    "import emission.storage.decorations.timeline as esdl\n",
-    "import emission.storage.timeseries.abstract_timeseries as esta\n",
-    "import emission.storage.timeseries.timequery as estt\n",
     "from plots import *\n",
     "import scaffolding\n",
     "from uuid import UUID\n",
@@ -180,7 +175,7 @@
    "execution_count": null,
    "id": "tracked-serbia",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -198,7 +193,7 @@
    "execution_count": null,
    "id": "about-seafood",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -213,34 +208,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "biological-vancouver",
-   "metadata": {},
-   "source": [
-    "### Distribution of Replaced_mode attribute"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "comprehensive-august",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# Note: The portion of pilot ebikes in the pie chart below is only when the mode_confirm is different that ebike. Example: mode_confirm was Walk, replaced_mode ebike.\n",
-    "# mode_confrim was Car, drove alone, replaced_mode ebike.\n",
-    "if study_type == 'program':\n",
-    "    labels_rm = expanded_ct['Replaced_mode'].value_counts(dropna=True).keys().tolist()\n",
-    "    values_rm = expanded_ct['Replaced_mode'].value_counts(dropna=True).tolist()\n",
-    "    plot_title=\"Number of trips for each replaced mode (selected by users)\\n%s\" % quality_text\n",
-    "    file_name= 'ntrips_replaced_mode%s.png' % file_suffix\n",
-    "    pie_chart_mode(plot_title,labels_rm,values_rm,file_name)\n",
-    "    alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_rm, labels_rm), file_name, plot_title, './alt_text_lookup.json')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "careful-spencer",
    "metadata": {},
    "source": [
@@ -251,7 +218,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "conservative-september",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "labels_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
@@ -276,7 +245,7 @@
    "execution_count": null,
    "id": "identified-replica",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -302,7 +271,7 @@
    "execution_count": null,
    "id": "satisfied-sharing",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
