--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -41,18 +41,13 @@
    "source": [
     "from collections import defaultdict\n",
     "import datetime\n",
+    "import sys\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "\n",
-    "import emission.core.get_database as edb\n",
-    "import emission.core.wrapper.entry as ecwe\n",
-    "import emission.storage.decorations.analysis_timeseries_queries as esda\n",
-    "import emission.storage.decorations.trip_queries as esdt\n",
-    "import emission.storage.decorations.timeline as esdl\n",
-    "import emission.storage.timeseries.abstract_timeseries as esta\n",
-    "import emission.storage.timeseries.timequery as estt\n",
     "from plots import *\n",
     "import scaffolding\n",
     "from uuid import UUID\n",
@@ -60,6 +55,18 @@
     "sns.set_style(\"whitegrid\")\n",
     "sns.set()\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "assisted-mathematics",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Do not run this notebook at all unless it is for a program; nbclient will run up through this cell\n",
+    "if study_type != \"program\":\n",
+    "    raise Exception(\"The plots in this notebook are only relevant to programs\")"
    ]
   },
   {
@@ -164,7 +171,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "quality_text_mode = scaffolding.get_quality_text_ebike(expanded_ct, data_eb)"
+    "quality_text = scaffolding.get_quality_text(expanded_ct, data_eb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "noble-joint",
+   "metadata": {},
+   "source": [
+    "### Distribution of Replaced_mode attribute"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "liked-shade",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note: The portion of pilot ebikes in the pie chart below is only when the mode_confirm is different that ebike. Example: mode_confirm was Walk, replaced_mode ebike.\n",
+    "# mode_confrim was Car, drove alone, replaced_mode ebike.\n",
+    "labels_rm = expanded_ct['Replaced_mode'].value_counts(dropna=True).keys().tolist()\n",
+    "values_rm = expanded_ct['Replaced_mode'].value_counts(dropna=True).tolist()\n",
+    "plot_title=\"Number of trips for each replaced mode (selected by users)\\n%s\" % quality_text\n",
+    "file_name= 'ntrips_replaced_mode%s.png' % file_suffix\n",
+    "pie_chart_mode(plot_title,labels_rm,values_rm,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_rm, labels_rm), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -184,13 +216,12 @@
    },
    "outputs": [],
    "source": [
-    "if study_type == 'program':\n",
-    "    labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
-    "    values_tp = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
-    "    plot_title=f\"Number of trips for each purpose for {mode_of_interest} only\\n{quality_text_mode}\"\n",
-    "    file_name= 'ntrips_ebike_purpose%s.png' % file_suffix\n",
-    "    pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)\n",
-    "    scaffolding.store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title, './alt_text_lookup.json')"
+    "labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
+    "values_tp = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
+    "plot_title=f\"Number of trips for each purpose for {mode_of_interest} only\\n{quality_text}\"\n",
+    "file_name= 'ntrips_ebike_purpose%s.png' % file_suffix\n",
+    "pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -200,13 +231,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if study_type == 'program':\n",
-    "    labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
-    "    values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
-    "    plot_title=f\"Number of trips for each replaced transport mode for {mode_of_interest} only\\n{quality_text_mode}\"\n",
-    "    file_name ='ntrips_ebike_replaced_mode%s.png' % file_suffix\n",
-    "    pie_chart_mode(plot_title,labels_eb,values_eb,file_name)\n",
-    "    scaffolding.store_alt_text_pie(pd.DataFrame(values_eb, labels_eb), file_name, plot_title, './alt_text_lookup.json')"
+    "labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
+    "values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
+    "plot_title=f\"Number of trips for each replaced transport mode for {mode_of_interest} only\\n{quality_text}\"\n",
+    "file_name ='ntrips_ebike_replaced_mode%s.png' % file_suffix\n",
+    "pie_chart_mode(plot_title,labels_eb,values_eb,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_eb, labels_eb), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -224,25 +254,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if study_type == 'program':\n",
-    "    dg=data_eb.groupby('Replaced_mode').agg({'distance_miles': ['sum', 'count' , 'mean']},)\n",
-    "    dg.columns = ['Total (miles)', 'Count' ,'Average (miles)']\n",
-    "    dg = dg.reset_index()\n",
-    "    dg = dg.sort_values(by=['Total (miles)'], ascending=False)\n",
+    "dg=data_eb.groupby('Replaced_mode').agg({'distance_miles': ['sum', 'count' , 'mean']},)\n",
+    "dg.columns = ['Total (miles)', 'Count' ,'Average (miles)']\n",
+    "dg = dg.reset_index()\n",
+    "dg = dg.sort_values(by=['Total (miles)'], ascending=False)\n",
     "\n",
-    "    dg_dict = dict(zip(dg['Replaced_mode'], dg['Total (miles)']))\n",
-    "    labels_m = []\n",
-    "    values_m = []\n",
+    "dg_dict = dict(zip(dg['Replaced_mode'], dg['Total (miles)']))\n",
+    "labels_m = []\n",
+    "values_m = []\n",
     "\n",
-    "    for x, y in dg_dict.items():\n",
-    "        labels_m.append(x)\n",
-    "        values_m.append(y)\n",
+    "for x, y in dg_dict.items():\n",
+    "    labels_m.append(x)\n",
+    "    values_m.append(y)\n",
     "\n",
-    "    plot_title=f\"Distribution of Miles Replaced by {mode_of_interest} \\n{quality_text_mode}\"\n",
-    "    file_name ='miles_ebike_replaced_mode%s.png' % file_suffix\n",
-    "    pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
-    "    scaffolding.store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title, './alt_text_lookup.json')\n",
-    "    print(dg)"
+    "plot_title=f\"Distribution of Miles Replaced by {mode_of_interest} \\n{quality_text}\"\n",
+    "file_name ='miles_ebike_replaced_mode%s.png' % file_suffix\n",
+    "pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title, './alt_text_lookup.json')\n",
+    "print(dg)"
    ]
   },
   {
@@ -260,16 +289,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if study_type == 'program':\n",
-    "    data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
-    "    x='Replaced_mode'\n",
-    "    y='Average (miles)'\n",
-    "    y2 = \"Count\"\n",
+    "data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
+    "x='Replaced_mode'\n",
+    "y='Average (miles)'\n",
+    "y2 = \"Count\"\n",
     "\n",
-    "    plot_title=\" Average Miles for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\\n%s\" % quality_text_mode\n",
-    "    file_name ='average_miles_replaced_mode%s.png' % file_suffix\n",
-    "    barplot_mode(data,x,y,plot_title,file_name)\n",
-    "    scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title, './alt_text_lookup.json')"
+    "plot_title=\" Average Miles for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\\n%s\" % quality_text\n",
+    "file_name ='average_miles_replaced_mode%s.png' % file_suffix\n",
+    "barplot_mode(data,x,y,plot_title,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -279,17 +307,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if study_type == 'program':\n",
-    "    data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
-    "    x='Replaced_mode'\n",
-    "    y='Average (miles)'\n",
-    "    y2 = \"Count\"\n",
+    "data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
+    "x='Replaced_mode'\n",
+    "y='Average (miles)'\n",
+    "y2 = \"Count\"\n",
     "\n",
-    "    plot_title=\" Average Miles for each replaced mode with > 3 entries\\n%s\" % quality_text_mode\n",
-    "    file_name ='average_miles_replaced_mode2%s.png' % file_suffix\n",
+    "plot_title=\" Average Miles for each replaced mode with > 3 entries\\n%s\" % quality_text\n",
+    "file_name ='average_miles_replaced_mode2%s.png' % file_suffix\n",
     "\n",
-    "    barplot_mode2(data,x,y,y2,plot_title,file_name)\n",
-    "    scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title, './alt_text_lookup.json')"
+    "barplot_mode2(data,x,y,y2,plot_title,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -307,20 +334,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if study_type == 'program':\n",
-    "    fq_days = data_eb.groupby(['start_local_dt_day']).agg({'start_local_dt_day': ['sum', 'count']})\n",
-    "    fq_days = fq_days.reset_index()\n",
-    "    fq_days.columns = ['Day of the Month', 'Total', 'Number of Trips']\n",
+    "fq_days = data_eb.groupby(['start_local_dt_day']).agg({'start_local_dt_day': ['sum', 'count']})\n",
+    "fq_days = fq_days.reset_index()\n",
+    "fq_days.columns = ['Day of the Month', 'Total', 'Number of Trips']\n",
     "\n",
-    "    data = fq_days\n",
-    "    x = 'Day of the Month'\n",
-    "    y = 'Number of Trips'\n",
+    "data = fq_days\n",
+    "x = 'Day of the Month'\n",
+    "y = 'Number of Trips'\n",
     "\n",
-    "    plot_title=f\"Number of {mode_of_interest} trips by day\\n%s\" % quality_text_mode\n",
-    "    file_name ='ntrips_ebike_per_day%s.png' % file_suffix\n",
+    "plot_title=f\"Number of {mode_of_interest} trips by day\\n%s\" % quality_text\n",
+    "file_name ='ntrips_ebike_per_day%s.png' % file_suffix\n",
     "\n",
-    "    barplot_day(data,x,y,plot_title,file_name)\n",
-    "    scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month'].values), file_name, plot_title, './alt_text_lookup.json')"
+    "barplot_day(data,x,y,plot_title,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month'].values), file_name, plot_title, './alt_text_lookup.json')"
    ]
   },
   {
@@ -338,22 +364,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if study_type == 'program':\n",
-    "    fq_weekdays = data_eb.groupby(['start_local_dt_weekday']).agg({'start_local_dt_weekday': ['sum', 'count']})\n",
-    "    fq_weekdays = fq_weekdays.reset_index()\n",
-    "    fq_weekdays.columns = ['Weekday', 'Total', 'Number of Trips']\n",
-    "    weekday_labels = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]\n",
-    "    fq_weekdays[\"Weekday\"] = fq_weekdays.Weekday.apply(lambda x: weekday_labels[x])\n",
+    "fq_weekdays = data_eb.groupby(['start_local_dt_weekday']).agg({'start_local_dt_weekday': ['sum', 'count']})\n",
+    "fq_weekdays = fq_weekdays.reset_index()\n",
+    "fq_weekdays.columns = ['Weekday', 'Total', 'Number of Trips']\n",
+    "weekday_labels = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]\n",
+    "fq_weekdays[\"Weekday\"] = fq_weekdays.Weekday.apply(lambda x: weekday_labels[x])\n",
     "\n",
-    "    data = fq_weekdays\n",
-    "    x = 'Weekday'\n",
-    "    y = 'Number of Trips'\n",
+    "data = fq_weekdays\n",
+    "x = 'Weekday'\n",
+    "y = 'Number of Trips'\n",
     "\n",
-    "    plot_title=\"Number of trips by weekday\\n%s\" % quality_text_mode\n",
-    "    file_name ='ntrips_per_weekday%s.png' % file_suffix\n",
+    "plot_title=\"Number of trips by weekday\\n%s\" % quality_text\n",
+    "file_name ='ntrips_per_weekday%s.png' % file_suffix\n",
     "\n",
-    "    barplot_day(data,x,y,plot_title,file_name)\n",
-    "    scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday'].values), file_name, plot_title, './alt_text_lookup.json')"
+    "barplot_day(data,x,y,plot_title,file_name)\n",
+    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday'].values), file_name, plot_title, './alt_text_lookup.json')"
    ]
   }
  ],
